printing scores as %

--- a/benchmarking/example_classification.ipynb
+++ b/benchmarking/example_classification.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:39.750586600Z",
-     "start_time": "2023-11-30T17:30:37.368081600Z"
+     "end_time": "2023-11-30T17:43:20.715751600Z",
+     "start_time": "2023-11-30T17:43:18.384433Z"
     }
    },
    "outputs": [],
@@ -41,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:39.829588200Z",
-     "start_time": "2023-11-30T17:30:39.751586500Z"
+     "end_time": "2023-11-30T17:43:20.811753900Z",
+     "start_time": "2023-11-30T17:43:20.717752Z"
     }
    },
    "id": "7fbf186106f95e34"
@@ -71,8 +71,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:40.149221500Z",
-     "start_time": "2023-11-30T17:30:39.831588900Z"
+     "end_time": "2023-11-30T17:43:21.113759800Z",
+     "start_time": "2023-11-30T17:43:20.811753900Z"
     }
    },
    "id": "46770d57391111e3"
@@ -88,8 +88,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:40.165222Z",
-     "start_time": "2023-11-30T17:30:40.150400400Z"
+     "end_time": "2023-11-30T17:43:21.129761Z",
+     "start_time": "2023-11-30T17:43:21.113759800Z"
     }
    },
    "id": "62ab7c70024a7e94"
@@ -114,8 +114,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:40.211222900Z",
-     "start_time": "2023-11-30T17:30:40.166222100Z"
+     "end_time": "2023-11-30T17:43:21.175761200Z",
+     "start_time": "2023-11-30T17:43:21.130760200Z"
     }
    },
    "id": "ba249de33169ff4f"
@@ -132,8 +132,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:30:40.220223400Z",
-     "start_time": "2023-11-30T17:30:40.182222200Z"
+     "end_time": "2023-11-30T17:43:21.184761500Z",
+     "start_time": "2023-11-30T17:43:21.146760700Z"
     }
    },
    "id": "ae01f42ea252b218"
@@ -147,40 +147,40 @@
      "output_type": "stream",
      "text": [
       "Morgan Fingerprint\n",
-      " - Time of fingerprints computing : 2.26s\n",
-      " - - ROC AUC score for RF : 0.8312466320411838\n",
-      " - - ROC AUC score for LogReg : 0.7697658045116741\n",
-      " - - ROC AUC score for LGBM : 0.8068905305631249\n",
+      " - Time of fingerprints computing : 2.53s\n",
+      " - - ROC AUC score for RF : 83%\n",
+      " - - ROC AUC score for LogReg : 76%\n",
+      " - - ROC AUC score for LGBM : 80%\n",
       "Atom Pair Fingerprint\n",
-      " - Time of fingerprints computing : 0.79s\n",
-      " - - ROC AUC score for RF : 0.8163811147163397\n",
-      " - - ROC AUC score for LogReg : 0.7398982467717491\n",
-      " - - ROC AUC score for LGBM : 0.8174743610485823\n",
+      " - Time of fingerprints computing : 0.71s\n",
+      " - - ROC AUC score for RF : 81%\n",
+      " - - ROC AUC score for LogReg : 73%\n",
+      " - - ROC AUC score for LGBM : 81%\n",
       "Topological Torsion Fingerprint\n",
-      " - Time of fingerprints computing : 0.8s\n",
-      " - - ROC AUC score for RF : 0.8364287767743437\n",
-      " - - ROC AUC score for LogReg : 0.7664591006122096\n",
-      " - - ROC AUC score for LGBM : 0.8347883764708081\n",
+      " - Time of fingerprints computing : 0.78s\n",
+      " - - ROC AUC score for RF : 83%\n",
+      " - - ROC AUC score for LogReg : 76%\n",
+      " - - ROC AUC score for LGBM : 83%\n",
       "MACCS Keys Fingerprint\n",
-      " - Time of fingerprints computing : 2.87s\n",
-      " - - ROC AUC score for RF : 0.8071400089939629\n",
-      " - - ROC AUC score for LogReg : 0.756602685534455\n",
-      " - - ROC AUC score for LGBM : 0.8286703160583851\n",
+      " - Time of fingerprints computing : 2.9s\n",
+      " - - ROC AUC score for RF : 80%\n",
+      " - - ROC AUC score for LogReg : 75%\n",
+      " - - ROC AUC score for LGBM : 82%\n",
       "ERG Fingerprint\n",
-      " - Time of fingerprints computing : 2.64s\n",
-      " - - ROC AUC score for RF : 0.7962790982087237\n",
-      " - - ROC AUC score for LogReg : 0.7451256161055633\n",
-      " - - ROC AUC score for LGBM : 0.8028245629456375\n",
+      " - Time of fingerprints computing : 1.0s\n",
+      " - - ROC AUC score for RF : 79%\n",
+      " - - ROC AUC score for LogReg : 74%\n",
+      " - - ROC AUC score for LGBM : 80%\n",
       "MAP4 Fingerprint\n",
-      " - Time of fingerprints computing : 69.86s\n",
-      " - - ROC AUC score for RF : 0.7027584458534136\n",
-      " - - ROC AUC score for LogReg : 0.6280580216763847\n",
-      " - - ROC AUC score for LGBM : 0.6817602178933999\n",
+      " - Time of fingerprints computing : 20.21s\n",
+      " - - ROC AUC score for RF : 70%\n",
+      " - - ROC AUC score for LogReg : 62%\n",
+      " - - ROC AUC score for LGBM : 68%\n",
       "MHFP Fingerprint\n",
-      " - Time of fingerprints computing : 31.26s\n",
-      " - - ROC AUC score for RF : 0.6953641174854442\n",
-      " - - ROC AUC score for LogReg : 0.5920745267447248\n",
-      " - - ROC AUC score for LGBM : 0.6522716550462798\n"
+      " - Time of fingerprints computing : 31.68s\n",
+      " - - ROC AUC score for RF : 69%\n",
+      " - - ROC AUC score for LogReg : 59%\n",
+      " - - ROC AUC score for LGBM : 65%\n"
      ]
     }
    ],
@@ -238,14 +238,14 @@
     "        clf = classifier(**clf_kwargs)\n",
     "        clf.fit(X_fp_train, y_train)\n",
     "        score = roc_auc_score(y_test, clf.predict_proba(X_fp_test)[:, 1])\n",
-    "        print(f\" - - ROC AUC score for {clf_name} :\", score)\n",
+    "        print(f\" - - ROC AUC score for {clf_name} : {int(100*score)}%\")\n",
     "        records[-1][clf_name] = score"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:34:41.011059200Z",
-     "start_time": "2023-11-30T17:30:40.200222600Z"
+     "end_time": "2023-11-30T17:46:11.305344100Z",
+     "start_time": "2023-11-30T17:43:21.163760600Z"
     }
    },
    "id": "cd43296660ef9623"
@@ -260,8 +260,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:34:41.023059300Z",
-     "start_time": "2023-11-30T17:34:41.009060Z"
+     "end_time": "2023-11-30T17:46:11.323344400Z",
+     "start_time": "2023-11-30T17:46:11.305344100Z"
     }
    },
    "id": "c8873cbbb3a068a2"
@@ -276,8 +276,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:34:41.041060600Z",
-     "start_time": "2023-11-30T17:34:41.024059700Z"
+     "end_time": "2023-11-30T17:46:11.337344600Z",
+     "start_time": "2023-11-30T17:46:11.321344300Z"
     }
    },
    "id": "c909fecf7f4cdc02"
@@ -288,8 +288,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "               fp_name  execution_time        RF    LogReg      LGBM\n0               Morgan        2.262339  0.831247  0.769766  0.806891\n1            Atom Pair        0.792688  0.816381  0.739898  0.817474\n2  Topological Torsion        0.798231  0.836429  0.766459  0.834788\n3           MACCS Keys        2.872269  0.807140  0.756603  0.828670\n4                  ERG        2.639954  0.796279  0.745126  0.802825\n5                 MAP4       69.864257  0.702758  0.628058  0.681760\n6                 MHFP       31.262374  0.695364  0.592075  0.652272",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fp_name</th>\n      <th>execution_time</th>\n      <th>RF</th>\n      <th>LogReg</th>\n      <th>LGBM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Morgan</td>\n      <td>2.262339</td>\n      <td>0.831247</td>\n      <td>0.769766</td>\n      <td>0.806891</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Atom Pair</td>\n      <td>0.792688</td>\n      <td>0.816381</td>\n      <td>0.739898</td>\n      <td>0.817474</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Topological Torsion</td>\n      <td>0.798231</td>\n      <td>0.836429</td>\n      <td>0.766459</td>\n      <td>0.834788</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>MACCS Keys</td>\n      <td>2.872269</td>\n      <td>0.807140</td>\n      <td>0.756603</td>\n      <td>0.828670</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ERG</td>\n      <td>2.639954</td>\n      <td>0.796279</td>\n      <td>0.745126</td>\n      <td>0.802825</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>MAP4</td>\n      <td>69.864257</td>\n      <td>0.702758</td>\n      <td>0.628058</td>\n      <td>0.681760</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>MHFP</td>\n      <td>31.262374</td>\n      <td>0.695364</td>\n      <td>0.592075</td>\n      <td>0.652272</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "               fp_name  execution_time        RF    LogReg      LGBM\n0               Morgan        2.531973  0.831247  0.769766  0.806891\n1            Atom Pair        0.712641  0.816381  0.739898  0.817474\n2  Topological Torsion        0.781641  0.836429  0.766459  0.834788\n3           MACCS Keys        2.901503  0.807140  0.756603  0.828670\n4                  ERG        0.995269  0.796280  0.745126  0.802825\n5                 MAP4       20.208060  0.702755  0.628058  0.681760\n6                 MHFP       31.677383  0.695364  0.592075  0.652272",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fp_name</th>\n      <th>execution_time</th>\n      <th>RF</th>\n      <th>LogReg</th>\n      <th>LGBM</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Morgan</td>\n      <td>2.531973</td>\n      <td>0.831247</td>\n      <td>0.769766</td>\n      <td>0.806891</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Atom Pair</td>\n      <td>0.712641</td>\n      <td>0.816381</td>\n      <td>0.739898</td>\n      <td>0.817474</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Topological Torsion</td>\n      <td>0.781641</td>\n      <td>0.836429</td>\n      <td>0.766459</td>\n      <td>0.834788</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>MACCS Keys</td>\n      <td>2.901503</td>\n      <td>0.807140</td>\n      <td>0.756603</td>\n      <td>0.828670</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ERG</td>\n      <td>0.995269</td>\n      <td>0.796280</td>\n      <td>0.745126</td>\n      <td>0.802825</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>MAP4</td>\n      <td>20.208060</td>\n      <td>0.702755</td>\n      <td>0.628058</td>\n      <td>0.681760</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>MHFP</td>\n      <td>31.677383</td>\n      <td>0.695364</td>\n      <td>0.592075</td>\n      <td>0.652272</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 10,
      "metadata": {},
@@ -302,8 +302,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:34:41.061060500Z",
-     "start_time": "2023-11-30T17:34:41.041060600Z"
+     "end_time": "2023-11-30T17:46:11.359344600Z",
+     "start_time": "2023-11-30T17:46:11.337344600Z"
     }
    },
    "id": "9cdc322e421cc7da"
@@ -316,8 +316,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-30T17:34:41.074060100Z",
-     "start_time": "2023-11-30T17:34:41.056059900Z"
+     "end_time": "2023-11-30T17:46:11.415345900Z",
+     "start_time": "2023-11-30T17:46:11.353345300Z"
     }
    },
    "id": "53b36d1cf36a4b68"
