--- a/examples/01_skfp_introduction.ipynb
+++ b/examples/01_skfp_introduction.ipynb
@@ -93,7 +93,9 @@
     "mol_from_smiles = MolFromSmilesTransformer()\n",
     "mols = mol_from_smiles.transform(smiles_list)\n",
     "\n",
-    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(mols, y, test_size=0.2)\n",
+    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(\n",
+    "    mols, y, test_size=0.2\n",
+    ")\n",
     "\n",
     "# there's no need to call .fit() on fingerprints, they have no learnable weights\n",
     "ecfp_fp = ECFPFingerprint()\n",
