--- a/examples/02_fingerprint_types.ipynb
+++ b/examples/02_fingerprint_types.ipynb
@@ -853,7 +853,7 @@
     "    (\"Atom Pair\", AtomPairFingerprint()),\n",
     "]:\n",
     "    fp_time = get_fp_compute_time(fp_obj, mols)\n",
-    "    print(f\"{fp_name}: {fp_time:.3f}s\")\n"
+    "    print(f\"{fp_name}: {fp_time:.3f}s\")"
    ]
   },
   {
@@ -916,7 +916,9 @@
     "]:\n",
     "    memory_dense, memory_sparse = get_fp_memory_sizes(fp_obj, mols)\n",
     "    reduction = memory_dense / memory_sparse\n",
-    "    print(f\"{fp_name}: dense {memory_dense} B, sparse {memory_sparse} B, {reduction:.1f}x reduction\")\n"
+    "    print(\n",
+    "        f\"{fp_name}: dense {memory_dense} B, sparse {memory_sparse} B, {reduction:.1f}x reduction\"\n",
+    "    )"
    ]
   },
   {
@@ -961,25 +963,27 @@
     "\n",
     "\n",
     "def get_rf_auroc(\n",
-    "    fp_obj, \n",
+    "    fp_obj,\n",
     "    mols_train: list[Mol],\n",
     "    mols_test: list[Mol],\n",
     "    y_train: np.ndarray,\n",
-    "    y_test: np.ndarray\n",
+    "    y_test: np.ndarray,\n",
     ") -> tuple[float, float]:\n",
     "    X_train = fp_obj.transform(mols_train)\n",
     "    X_test = fp_obj.transform(mols_test)\n",
-    "    \n",
+    "\n",
     "    clf = RandomForestClassifier(n_jobs=-1, random_state=0)\n",
     "    clf.fit(X_train, y_train)\n",
-    "    \n",
+    "\n",
     "    y_pred = clf.predict_proba(X_test)[:, 1]\n",
     "    auroc = roc_auc_score(y_test, y_pred)\n",
-    "    \n",
+    "\n",
     "    return auroc\n",
     "\n",
     "\n",
-    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(mols, y, test_size=0.2)\n",
+    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(\n",
+    "    mols, y, test_size=0.2\n",
+    ")\n",
     "\n",
     "for fp_name, fp_obj in [\n",
     "    (\"Mordred\", MordredFingerprint(n_jobs=-1)),\n",
@@ -990,7 +994,7 @@
     "    (\"Atom Pair\", AtomPairFingerprint()),\n",
     "]:\n",
     "    auroc = get_rf_auroc(fp_obj, mols_train, mols_test, y_train, y_test)\n",
-    "    print(f\"{fp_name} AUROC {auroc:.2%}\")\n"
+    "    print(f\"{fp_name} AUROC {auroc:.2%}\")"
    ]
   }
  ],
