--- a/examples/03_pipelines.ipynb
+++ b/examples/03_pipelines.ipynb
@@ -69,7 +69,9 @@
     "\n",
     "\n",
     "smiles_list, y = load_bace()\n",
-    "smiles_train, smiles_test, y_train, y_test = scaffold_train_test_split(smiles_list, y, test_size=0.2)\n",
+    "smiles_train, smiles_test, y_train, y_test = scaffold_train_test_split(\n",
+    "    smiles_list, y, test_size=0.2\n",
+    ")\n",
     "\n",
     "pipeline = make_pipeline(\n",
     "    ECFPFingerprint(),\n",
@@ -224,7 +226,7 @@
     "X_train = pipeline.transform(smiles_train)\n",
     "X_test = pipeline.transform(smiles_test)\n",
     "\n",
-    "plt.scatter(X_train[:, 0], X_train[:,1], c=\"b\", label=\"Train set\")\n",
+    "plt.scatter(X_train[:, 0], X_train[:, 1], c=\"b\", label=\"Train set\")\n",
     "plt.scatter(X_test[:, 0], X_test[:, 1], c=\"r\", label=\"Test set\")\n",
     "plt.title(\"BACE scaffold split train-test visualization\")\n",
     "plt.legend()\n",
