--- a/examples/04_conformers.ipynb
+++ b/examples/04_conformers.ipynb
@@ -203,8 +203,7 @@
     "from rdkit.Chem import MolToMolBlock\n",
     "\n",
     "view = py3Dmol.view(\n",
-    "    data=MolToMolBlock(mols[0]),\n",
-    "    style={\"stick\": {}, \"sphere\": {\"scale\": 0.3}}\n",
+    "    data=MolToMolBlock(mols[0]), style={\"stick\": {}, \"sphere\": {\"scale\": 0.3}}\n",
     ")\n",
     "view.zoomTo()"
    ]
@@ -256,7 +255,12 @@
     }
    ],
    "source": [
-    "from skfp.fingerprints import AutocorrFingerprint, E3FPFingerprint, MORSEFingerprint, RDFFingerprint\n",
+    "from skfp.fingerprints import (\n",
+    "    AutocorrFingerprint,\n",
+    "    E3FPFingerprint,\n",
+    "    MORSEFingerprint,\n",
+    "    RDFFingerprint,\n",
+    ")\n",
     "from skfp.model_selection import scaffold_train_test_split\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -264,7 +268,9 @@
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
     "\n",
-    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(mols, y, test_size=0.2)\n",
+    "mols_train, mols_test, y_train, y_test = scaffold_train_test_split(\n",
+    "    mols, y, test_size=0.2\n",
+    ")\n",
     "\n",
     "for fp_name, fp_obj in [\n",
     "    (\"Autocorrelation\", AutocorrFingerprint(use_3D=True)),\n",
@@ -273,18 +279,18 @@
     "    (\"RDF\", RDFFingerprint()),\n",
     "]:\n",
     "    print(fp_name)\n",
-    "    \n",
+    "\n",
     "    pipeline = make_pipeline(\n",
     "        fp_obj,\n",
     "        RandomForestClassifier(random_state=0),\n",
     "    )\n",
     "    pipeline.fit(mols_train, y_train)\n",
-    "    \n",
+    "\n",
     "    y_pred = pipeline.predict_proba(mols_test)[:, 1]\n",
     "    auroc = roc_auc_score(y_test, y_pred)\n",
-    "    \n",
+    "\n",
     "    print(f\"AUROC: {auroc:.2%}\")\n",
-    "    print()\n"
+    "    print()"
    ]
   },
   {
