Reformat notebook imports

--- a/examples/02_fingerprint_types.ipynb
+++ b/examples/02_fingerprint_types.ipynb
@@ -55,7 +55,6 @@
     "from skfp.datasets.moleculenet import load_bace\n",
     "from skfp.preprocessing import MolFromSmilesTransformer\n",
     "\n",
-    "\n",
     "smiles_list, y = load_bace()\n",
     "\n",
     "mol_from_smiles = MolFromSmilesTransformer()\n",
@@ -603,7 +602,6 @@
    "source": [
     "from skfp.fingerprints import MACCSFingerprint, PubChemFingerprint\n",
     "\n",
-    "\n",
     "fp_maccs = MACCSFingerprint(n_jobs=-1)\n",
     "fp_maccs_count = MACCSFingerprint(count=True, n_jobs=-1)\n",
     "\n",
@@ -715,8 +713,7 @@
    },
    "outputs": [],
    "source": [
-    "from skfp.fingerprints import ECFPFingerprint, AtomPairFingerprint\n",
-    "\n",
+    "from skfp.fingerprints import AtomPairFingerprint, ECFPFingerprint\n",
     "\n",
     "fp_ecfp = ECFPFingerprint()\n",
     "fp_ecfp_short = ECFPFingerprint(fp_size=1024)\n",
@@ -892,9 +889,6 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "\n",
-    "\n",
     "def get_fp_memory_sizes(fp_obj, mols: list[Mol]) -> tuple[float, float]:\n",
     "    X_sparse = fp_obj.transform(mols)\n",
     "    X_dense = X_sparse.todense()\n",
@@ -957,9 +951,10 @@
     }
    ],
    "source": [
-    "from skfp.model_selection import scaffold_train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "from skfp.model_selection import scaffold_train_test_split\n",
     "\n",
     "\n",
     "def get_rf_auroc(\n",
