Added formulas for most of the metrics

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -30,7 +30,104 @@
     "     - count data.\n",
     " - those based on molecular structure (currently, only Fraggle similarity works this way).\n",
     "\n",
-    "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input."
+    "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input.\n",
+    "Every similarity has its corresponding distance, which is usually equal to $1 - similarity$. \n",
+    "However, there are some exceptions (see next section)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metrics overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-Fingerprints currently supports 14 different metrics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fingerprint-based methods can be split into two groups. The first considers only 'on' bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
+    "\n",
+    "Only \"on\" bits:\n",
+    "\n",
+    " - [Rand](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{n}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Russell](https://www.cabidigitallibrary.org/doi/full/10.5555/19412900343):\n",
+    "   - binary: $sim(x, y) = \\frac{a}{n}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    "Both \"on\" and \"off\" bits:\n",
+    "\n",
+    " - [Braun-Blanguet](https://www.cabidigitallibrary.org/doi/full/10.5555/19331600801): \n",
+    "   - binary $sim(a, b) = \\frac{|a \\cap b|}{\\max(|a|, |b|)}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [CT4](https://match.pmf.kg.ac.rs/electronic_versions/Match68/n2/match68n2_581-592.pdf):\n",
+    "   - binary $sim(a, b) = \\frac{\\log (1 + |a \\cap b|)}{\\log (1 + |a \\cup b|)}\n",
+    "        = \\frac{\\log (1 + |a \\cap b|)}{\\log (1 + |a| + |b| - |a \\cap b|)}$,\n",
+    "   - count $sim(a, b) = \\frac{\\log (1 + a \\cdot b)}{\\log (1 + \\|a\\|^2 + \\|b\\|^2 - a \\cdot b)}$ ,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Dice](https://esajournals.onlinelibrary.wiley.com/doi/abs/10.2307/1932409):\n",
+    "   - binary: $sim(a, b) = \\frac{2 |a \\cap b|}{|a| + |b|}$,\n",
+    "   - count: $sim(a, b) = \\frac{2 \\cdot a \\cdot b}{|a|^2 + |b|^2}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Harris-Lahey](https://doi.org/10.1901/jaba.1978.11-523):\n",
+    "   - binary: $sim(x, y) = \\frac{a * (2d + b + c)}{2 * (a + b + c)} +\n",
+    "                    \\frac{d * (2a + b + c)}{2 * (b + c + d)}$,\n",
+    "   - values in range $(0, n)$, where $n$ is length of the input data,\n",
+    "   - values can be normalized by dividing by $n$,\n",
+    "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
+    "\n",
+    " - [Kulczynski]:\n",
+    "   - binary: $sim(x, y) = \\frac{1}{2} \\left( \\frac{a}{a+b} + \\frac{a}{a+c} \\right)$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [McConnaughey](https://books.google.pl/books?id=7aBbOQAACAAJ)\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b| \\cdot (|a| + |b|) - |a| \\cdot |b|}{|a| \\cdot |b|}\n",
+    "                  = \\frac{|a \\cap b|}{|a|} + \\frac{|a \\cap b|}{|b|} - 1$,\n",
+    "   - values in range $(-1, 1)$,\n",
+    "   - values can be normalized by dividing by adding $1$ and dividing by $2$,\n",
+    "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
+    "\n",
+    " - [Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4): \n",
+    "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} +\n",
+    "                    \\frac{d}{2 * (2d + b + c)}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Simpson](https://doi.org/10.1038/163688a0):\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{\\min(|a|, |b|)}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Sokal-Sneath 2](https://www.cabidigitallibrary.org/doi/full/10.5555/19650300280):\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b| + |a \\Delta b} =\n",
+    "                    \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$\n",
+    "                    - check 0 behaviour\n",
+    "\n",
+    " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}$\n",
+    "   - count: $sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substructure-based:\n",
+    "\n",
+    " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf)\n",
+    " - [MCS](https://doi.org/10.1007/s10822-015-9872-1)"
    ]
   },
   {
@@ -39,7 +136,7 @@
     "id": "TK4EsPk0YCWS"
    },
    "source": [
-    "In this tutorial, we'll use [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3) and [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf) metrics as examples."
+    "In this tutorial, we'll use Tanimoto and Fraggle metrics as examples."
    ]
   },
   {
