Description for Fraggle and MCS

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -27,7 +27,7 @@
     "In general, we can divide similarity metrics into two groups:\n",
     " - those based on the similarity of vectorized molecules, which can be further divided based on the type of input:\n",
     "     - binary data,\n",
-    "     - count data.\n",
+    "     - count (non-binary) data.\n",
     " - those based on molecular structure (currently, only Fraggle similarity works this way).\n",
     "\n",
     "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input.\n",
@@ -111,13 +111,13 @@
     "\n",
     " - [Sokal-Sneath 2](https://www.cabidigitallibrary.org/doi/full/10.5555/19650300280):\n",
     "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b| + |a \\Delta b} =\n",
-    "                    \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$\n",
-    "                    - check 0 behaviour\n",
+    "                    \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$,\n",
+    "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
     "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}$\n",
-    "   - count: $sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}$\n",
-    "\n"
+    "   - count: $sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}$,\n",
+    "   - values in range $(0, 1)$,\n"
    ]
   },
   {
@@ -126,8 +126,12 @@
    "source": [
     "Substructure-based:\n",
     "\n",
-    " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf)\n",
-    " - [MCS](https://doi.org/10.1007/s10822-015-9872-1)"
+    " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf):\n",
+    "   - values in range $(0, 1)$\n",
+    " - [MCS](https://doi.org/10.1007/s10822-015-9872-1) (Maximum Common Similarity):\n",
+    "   - $sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}\n",
+    "        {numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}$\n",
+    "   - values in range $(0, 1)$"
    ]
   },
   {
