Description for Fraggle and MCS

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -25,10 +25,10 @@
    },
    "source": [
     "In general, we can divide similarity metrics into two groups:\n",
-    " - those based on the similarity of vectorized molecules, which can be further divided based on the type of input:\n",
+    " - those working on the vectorized molecules, which can be further divided based on the type of input:\n",
     "     - binary data,\n",
     "     - count (non-binary) data.\n",
-    " - those based on molecular structure (currently, only Fraggle similarity works this way).\n",
+    " - those working on RDKit's ``Mol`` objects.\n",
     "\n",
     "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input.\n",
     "Every similarity has its corresponding distance, which is usually equal to $1 - similarity$. \n",
@@ -53,19 +53,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fingerprint-based methods can be split into two groups. The first considers only 'on' bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
+    "Vector-based methods can be split into two groups. The first considers only 'on' bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
     "\n",
-    "Only \"on\" bits:\n",
+    "Keep in mind that metrics use a slightly different naming convention. If a similarity function takes arguments\n",
+    "$x$ and $y$, then inside the formula:\n",
     "\n",
-    " - [Rand](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{n}$,\n",
-    "   - values in range $(0, 1)$,\n",
+    "  - $a$ – $|x \\cap y|$, the number of common \"on\" bits\n",
+    "  - $b$ – the number of positions where $x$ is 1 and $y$ is 0\n",
+    "  - $c$ – the number of positions where $x$ is 0 and $y$ is 1\n",
+    "  - $d$ – the number of positions where both are 0\n",
     "\n",
-    " - [Russell](https://www.cabidigitallibrary.org/doi/full/10.5555/19412900343):\n",
-    "   - binary: $sim(x, y) = \\frac{a}{n}$,\n",
-    "   - values in range $(0, 1)$,\n",
     "\n",
-    "Both \"on\" and \"off\" bits:\n",
+    "**Both \"on\" and \"off\" bits**:\n",
     "\n",
     " - [Braun-Blanguet](https://www.cabidigitallibrary.org/doi/full/10.5555/19331600801): \n",
     "   - binary $sim(a, b) = \\frac{|a \\cap b|}{\\max(|a|, |b|)}$,\n",
@@ -89,7 +88,7 @@
     "   - values can be normalized by dividing by $n$,\n",
     "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
     "\n",
-    " - [Kulczynski]:\n",
+    " - Kulczynski:\n",
     "   - binary: $sim(x, y) = \\frac{1}{2} \\left( \\frac{a}{a+b} + \\frac{a}{a+c} \\right)$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
@@ -117,6 +116,16 @@
     " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
     "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}$\n",
     "   - count: $sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    "**Only \"on\" bits**:\n",
+    "\n",
+    " - [Rand](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{n}$,\n",
+    "   - values in range $(0, 1)$,\n",
+    "\n",
+    " - [Russell](https://www.cabidigitallibrary.org/doi/full/10.5555/19412900343):\n",
+    "   - binary: $sim(x, y) = \\frac{a}{n}$,\n",
     "   - values in range $(0, 1)$,\n"
    ]
   },
@@ -124,11 +133,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Substructure-based:\n",
+    "**Operating on mols**:\n",
     "\n",
     " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf):\n",
+    "   - uses fragmentation algorithm (ring cut in this case) to split the **query molecule** at acyclic and ring bonds,\n",
+    "   - fragments are compared to the **reference molecule** using [Tversky similarity](https://en.wikipedia.org/wiki/Tversky_index) (α=0.95,\n",
+    "    β=0.05),\n",
+    "   - fragments with **Tversky similarity** above defined threshold are used for calculating Tanimoto similarity with reference molecule,\n",
     "   - values in range $(0, 1)$\n",
     " - [MCS](https://doi.org/10.1007/s10822-015-9872-1) (Maximum Common Similarity):\n",
+    "   - uses [FMCS algorithm](https://doi.org/10.1186/1758-2946-5-S1-O6) to measure overlap of two molecules,\n",
+    "   - penalizes difference in number of atoms between molecules,\n",
     "   - $sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}\n",
     "        {numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}$\n",
     "   - values in range $(0, 1)$"
@@ -201,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "bFd5FjwEYCWU"
    },
@@ -222,15 +237,6 @@
    "source": [
     "assert binary_dist_numpy == 1\n",
     "assert binary_dist_sparse == 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "yVS_JV7CYCWU"
-   },
-   "source": [
-    "In most cases **distance** is just **1 - similarity**. Exceptions are any metrics, that use normalization (Harris-Lahey, McConnaughey)."
    ]
   },
   {
@@ -338,6 +344,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case we use RDKit's mols, not vectorized data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -353,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "X5VDP2qTYCWV"
    },
@@ -398,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {
     "id": "dU1_4arDlidQ"
    },
@@ -441,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "id": "fUtOB4EAYCWW"
    },
@@ -469,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "id": "g6JvBvgzYCWW"
    },
@@ -483,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {
     "id": "ElBquJpaYCWX"
    },
@@ -495,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -512,7 +525,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -540,7 +553,7 @@
        "       [0.33333333, 0.33333333, 0.        ]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
     "id": "yVqLYs2mcHL9"
    },
@@ -571,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {
     "id": "4OVmlVFldBjj"
    },
@@ -599,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {
     "id": "EgYpnj7kdGlH"
    },
@@ -613,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "id": "d4Be-8rodKXe"
    },
@@ -625,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -642,7 +655,7 @@
        "       [0.89655172, 0.71428571, 0.20895522]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -670,7 +683,7 @@
        "       [0.10344828, 0.28571429, 0.79104478]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {
     "id": "szBjBVHUdSUD"
    },
@@ -701,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {
     "id": "Jt0wjKx7djie"
    },
@@ -718,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -735,7 +748,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -774,7 +787,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {
     "id": "H-wTQQymf4i8"
    },
@@ -807,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {
     "id": "U7UsgXGXgaod"
    },
@@ -830,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {
     "id": "8YbFKfihgUKO"
    },
@@ -844,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {
     "id": "K0ifGaV5hDNU"
    },
@@ -855,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "metadata": {
     "id": "eQpVZwnUiV7M"
    },
@@ -875,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -888,7 +901,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.78 ms ± 709 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "4.15 ms ± 1.01 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -898,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -911,7 +924,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "164 µs ± 6.21 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "312 µs ± 157 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
