Try to fix docs

--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -71,19 +71,17 @@
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [CT4](https://match.pmf.kg.ac.rs/electronic_versions/Match68/n2/match68n2_581-592.pdf):\n",
-    "   - binary $sim(a, b) = \\frac{\\log (1 + |a \\cap b|)}{\\log (1 + |a \\cup b|)}\n",
-    "        = \\frac{\\log (1 + |a \\cap b|)}{\\log (1 + |a| + |b| - |a \\cap b|)}$,\n",
+    "   - binary $sim(a, b) = \\frac{\\log (1 + a \\cdot b)}{\\log (1 + \\|a\\|^2 + \\|b\\|^2 - a \\cdot b)}$\n",
     "   - count $sim(a, b) = \\frac{\\log (1 + a \\cdot b)}{\\log (1 + \\|a\\|^2 + \\|b\\|^2 - a \\cdot b)}$ ,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Dice](https://esajournals.onlinelibrary.wiley.com/doi/abs/10.2307/1932409):\n",
-    "   - binary: $sim(a, b) = \\frac{2 |a \\cap b|}{|a| + |b|}$,\n",
-    "   - count: $sim(a, b) = \\frac{2 \\cdot a \\cdot b}{|a|^2 + |b|^2}$,\n",
+    "   - binary $sim(a, b) = \\frac{2 |a \\cap b|}{|a| + |b|}$,\n",
+    "   - count $sim(a, b) = \\frac{2 \\cdot a \\cdot b}{|a|^2 + |b|^2}$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Harris-Lahey](https://doi.org/10.1901/jaba.1978.11-523):\n",
-    "   - binary: $sim(x, y) = \\frac{a * (2d + b + c)}{2 * (a + b + c)} +\n",
-    "                    \\frac{d * (2a + b + c)}{2 * (b + c + d)}$,\n",
+    "   - binary: $sim(x, y) = \\frac{a * (2d + b + c)}{2 * (a + b + c)} + \\frac{d * (2a + b + c)}{2 * (b + c + d)}$\n",
     "   - values in range $(0, n)$, where $n$ is length of the input data,\n",
     "   - values can be normalized by dividing by $n$,\n",
     "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
@@ -93,15 +91,13 @@
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [McConnaughey](https://books.google.pl/books?id=7aBbOQAACAAJ)\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b| \\cdot (|a| + |b|) - |a| \\cdot |b|}{|a| \\cdot |b|}\n",
-    "                  = \\frac{|a \\cap b|}{|a|} + \\frac{|a \\cap b|}{|b|} - 1$,\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b| \\cdot (|a| + |b|) - |a| \\cdot |b|}{|a| \\cdot |b|} = \\frac{|a \\cap b|}{|a|} + \\frac{|a \\cap b|}{|b|} - 1$,\n",
     "   - values in range $(-1, 1)$,\n",
     "   - values can be normalized by dividing by adding $1$ and dividing by $2$,\n",
     "   - distance always uses normalization option, thus it is not always equal to $1 - similarity$,\n",
     "\n",
     " - [Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4): \n",
-    "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} +\n",
-    "                    \\frac{d}{2 * (2d + b + c)}$,\n",
+    "   - binary: $sim(x, y) = \\frac{a}{2 * (2a + b + c)} + \\frac{d}{2 * (2d + b + c)}$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Simpson](https://doi.org/10.1038/163688a0):\n",
@@ -109,8 +105,7 @@
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Sokal-Sneath 2](https://www.cabidigitallibrary.org/doi/full/10.5555/19650300280):\n",
-    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b| + |a \\Delta b} =\n",
-    "                    \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$,\n",
+    "   - binary: $sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b| + |a \\Delta b} = \\frac{|a \\cap b|}{2 * |a| + 2 * |b| - 3 * |a \\cap b|}$,\n",
     "   - values in range $(0, 1)$,\n",
     "\n",
     " - [Tanimoto](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-015-0069-3):\n",
@@ -144,8 +139,7 @@
     " - [MCS](https://doi.org/10.1007/s10822-015-9872-1) (Maximum Common Similarity):\n",
     "   - uses [FMCS algorithm](https://doi.org/10.1186/1758-2946-5-S1-O6) to measure overlap of two molecules,\n",
     "   - penalizes difference in number of atoms between molecules,\n",
-    "   - $sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}\n",
-    "        {numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}$\n",
+    "   - $sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}{numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}$\n",
     "   - values in range $(0, 1)$"
    ]
   },
